...
                HStack {
                    Button(action: {
                        withAnimation {
                            shapesViewModel.removeAllShapes()
                        }
                      }) {
                        Text("Clear All")
                    }
                    Spacer()
                    NavigationLink("Edit Circles") {
                        EditCirclesView().environmentObject(shapesViewModel)
                    }
                }
                
                // Grid using ScrollView and LazyVGrid to display added shapes
                GridView().environmentObject(shapesViewModel)
...
